@@ -128,7 +128,7 @@ value caml_startup_common(char_os **argv, int pooling)
     exe_name = proc_self_exe;
   else
     exe_name = caml_search_exe_in_path(exe_name);
-  caml_sys_init(exe_name, argv);
+  caml_sys_init(proc_self_exe, exe_name, argv);
   caml_maybe_expand_stack();
   return caml_start_program(Caml_state);
 }
