@@ -71,6 +71,10 @@ Working version
   halving memory usage while remaining tail-recursive.
   (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)
 
+- #11???: Add Sys.interpreter containing the full path (if available) to the
+  currently executing runtime.
+  (David Allsopp, review by ???)
+
 ### Other libraries:
 
 - #11475: Make Unix terminal interface bindings domain-safe
